@@ -61,7 +61,7 @@ public class AbsenceService {
     private List<ZepAbsence> getFullZepAbsences(List<ZepAbsence> zepAbsences) {
         return zepAbsences.stream()
                 .map(absence -> getZepAbsenceById(absence.id()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // this also checks if startDate or endDate is exact match
